# frequency-shifter

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  PLUGIN_DOCUMENTATION.md
docs/: ARCHITECTURE.md  FeedbackDelayArchitecture.md  future-enhancements.md
plugin/: CMakeLists.txt
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/dsp/: DriftModulator.h  FeedbackDelay.h  HilbertShifter.h  LfoModulator.h  MusicalQuantizer.cpp  MusicalQuantizer.h  PhaseVocoder.cpp  STFT.cpp  SpectralDelay.h  SpectralMask.h
tests/: resonance_diagnostic.py  resonance_diagnostic_v2.py  resonance_diagnostic_v3.py
website/: algorithm.md  index.md  math.md  phase-vocoder.md  user-guide.md
website/_layouts/: default.html
